# Code_Review_Agent

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  run_live_review.py  test_demo_review.py
agents/: __init__.py  orchestrator.py  schemas.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  security.py  tasks.py  worker.py
backend/app/api/v1/: endpoints.py
backend/app/db/: base.py  crud.py  models.py  session.py
backend/app/models/: __init__.py
backend/app/observability/: logging_config.py  metrics.py
backend/app/parser/: ast.py  conventions.py  neo4j_ingest.py  pipeline.py
backend/app/tasks/: __init__.py  celery_app.py  review_job.py
backend/app/webhooks/: __init__.py  github.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: .gitkeep  001_add_escalation_outcome.py
backend/scripts/: ab_comparison_demo.py  evaluate_hybrid_routing.py  export_training_data.py  index_repo.py  init_db.sql  quantize_awq.py  run_pipeline.py  seed_debt_data.py  train_lora.py  training_data.jsonl
backend/tests/: locustfile.py  test_ast.py  test_conventions.py  test_debt_endpoints.py  test_edge_cases.py  test_evaluate_metrics.py  test_export_findings.py  test_integration_full_pipeline.py  test_integration_gate.py  test_model_backend_flag.py  test_neo4j.py  test_orchestrator.py  test_train_lora_halt.py  test_webhook.py
dashboard/: .gitkeep  package-lock.json
docs/: cost_comparison_table.md  e2e_test_report.md  edge_case_outcomes.md  github-app-setup.md  (+4 more)
(+37 files in other folders)
