[project]
name = "codereview-backend"
version = "0.1.0"
description = "AI Code Review & Technical Debt Agent — Backend"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.111.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
celery = {version = ">=5.4.0", extras = ["redis"]}
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
pydantic-settings = ">=2.3.0"
pydantic = ">=2.7.0"
pygithub = ">=2.3.0"
httpx = ">=0.27.0"
structlog = ">=24.1.0"
python-dotenv = ">=1.0.0"
chromadb = ">=0.5.0"
redis = ">=5.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # async test client for FastAPI
    "testcontainers>=4.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]   # FastAPI Depends() pattern

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
